[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/blessing_water.gd" type="Script" id=1]
[ext_resource path="res://sprites/splashes.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[sub_resource type="Animation" id=2]

resource_name = "bead"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 8, 8 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "splash1"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 8, 8 ), Rect2( 8, 0, 8, 8 ), Rect2( 16, 0, 8, 8 ), Rect2( 24, 0, 8, 8 ), Rect2( 32, 0, 8, 8 ), Rect2( 0, 8, 8, 8 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "splash2"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 8, 8 ), Rect2( 8, 8, 8, 8 ), Rect2( 16, 8, 8, 8 ), Rect2( 24, 8, 8, 8 ), Rect2( 32, 8, 8, 8 ), Rect2( 0, 16, 8, 8 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "splash3"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 8, 8 ), Rect2( 8, 16, 8, 8 ), Rect2( 16, 16, 8, 8 ), Rect2( 24, 16, 8, 8 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "splash4"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 32, 16, 8, 8 ), Rect2( 0, 24, 8, 8 ), Rect2( 8, 24, 8, 8 ) ]
}

[node name="BlessingWater" type="RigidBody2D" index="0"]

position = Vector2( 0.474119, -2.47218 )
input_pickable = false
collision_layer = 8
collision_mask = 1
mode = 2
mass = 3.0
friction = 1.0
bounce = 0.0
gravity_scale = 6.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( -0.0313787, -0.0156898 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.494089, 2.50704 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="BlessingAnimation" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/bead = SubResource( 2 )
anims/splash1 = SubResource( 3 )
anims/splash2 = SubResource( 4 )
anims/splash3 = SubResource( 5 )
anims/splash4 = SubResource( 6 )
blend_times = [  ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="3"]

position = Vector2( 8.9874, 12.006 )
rect = Rect2( -10, -10, 1, 1 )
_sections_unfolded = [ "Transform" ]

[connection signal="animation_finished" from="BlessingAnimation" to="." method="_on_BlessingAnimation_animation_finished"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


